--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -45,7 +45,7 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span class="glyphicon glyphicon-book" aria-hidden="true"></span>发起</h2>
             <hr>
-            <form action="">
+            <form action="publish" method="post">
                 <div class="form-group">
                     <label for="title">问题标题（简单扼要）：</label>
                     <input type="text" class="form-control" id="title" name="title" placeholder="问题标题...">
@@ -58,7 +58,12 @@
                     <label for="tag">添加标签：</label>
                     <input type="text" class="form-control" id="tag" name="tag" placeholder="输入标签，以'，'分隔...">
                 </div>
-                <button type="submit" class="btn btn-success btn-publish" >发布</button>
+                <div class="container-fluid main">
+                    <div class="row">
+                        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12"><span th:if="${error}" class="alert alert-danger" th:text="${error}"></span></div>
+                        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12"><button type="submit" class="btn btn-success btn-publish" >发布</button></div>
+                    </div>
+                </div>
             </form>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
