show question function finished

--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -11,3 +11,14 @@ body{
     float:right;
     margin-bottom: 15px;
 }
+
+.avartar{
+    height: 68px;
+    width: 68px;
+}
+
+.text-color-999{
+    font-size: 12px;
+    font-weight: normal;
+    color: #999;
+}
