--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -28,6 +28,7 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a href="/profile/questions">我的问题</a></li>
+                                    <li><a href="/profile/replies">最新回复</a></li>
                                     <li><a href="#">退出登录</a></li>
                                 </ul>
                             </li>
