--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/community.css">
 
     <script src="js/jquery-3.4.1.min.js"></script>
-<!--    <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>-->
     <script src="js/bootstrap.js" type="application/javascript"></script>
     <script src="js/npm.js" type="application/javascript"></script>
 
@@ -28,7 +27,9 @@
                     </a>
                 </div>
                 <div class="media-body">
-                    <h3 class="media-heading" th:text="${question.title}"></h3>
+                    <h3 class="media-heading" >
+                        <a th:href="@{'/question/'+${question.id}}" th:text="${question.title}"></a>
+                    </h3>
                     <span th:text="${question.description}"></span><br>
                     <span class="text-color-999"> <span th:text="${question.commentCount}"></span> 个回复 • <span th:text="${question.viewCount}"></span> 次浏览 • <span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}"></span> </span>
                 </div>
