--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -3,12 +3,12 @@
 <head>
     <title>发布 - 麻酱社区</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/community.css">
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.js" type="application/javascript"></script>
-    <script src="js/npm.js" type="application/javascript"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/css/community.css">
+    <script src="/js/jquery-3.4.1.min.js"></script>
+    <script src="/js/bootstrap.js" type="application/javascript"></script>
+    <script src="/js/npm.js" type="application/javascript"></script>
 
 </head>
 <body>
@@ -16,16 +16,17 @@
 <div class="container-fluid main">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h2><span class="glyphicon glyphicon-book" aria-hidden="true"></span>发起</h2>
+            <h2><span class="glyphicon glyphicon-book" aria-hidden="true"></span> <span th:text="${edit}"></span>  </h2>
             <hr>
-            <form action="publish" method="post">
+            <form action="/publish" method="post">
+                <input type="hidden" name="id" th:value="${id}">
                 <div class="form-group">
                     <label for="title">问题标题（简单扼要）：</label>
                     <input type="text" class="form-control"  id="title" name="title" placeholder="问题标题..." th:value="${title}">
                 </div>
                 <div class="form-group">
                     <label for="description">问题补充（必填，请参照右侧提示）</label>
-                    <textarea class="form-control" name="description" id="description" cols="30" rows="10" th:value="${description}" > </textarea>
+                    <textarea class="form-control" name="description" id="description" cols="30" rows="10" th:text="${description}" > </textarea>
                 </div>
                 <div class="form-group">
                     <label for="tag">添加标签：</label>
@@ -34,7 +35,7 @@
                 <div class="container-fluid main">
                     <div class="row">
                         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12"><span th:if="${error}" class="alert alert-danger" th:text="${error}"></span></div>
-                        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12"><button type="submit" class="btn btn-success btn-publish" >发布</button></div>
+                        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12"><button type="submit" class="btn btn-success btn-publish"><span  th:text="${buttonName}"/></button></div>
                     </div>
                 </div>
             </form>
